--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 
     <button onclick="setUp()" class="button choose">Create a new array</button>
 
+    <!-- Drop down menu -->
+
     <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">Dropdown</button>
       <div id="myDropdown" class="dropdown-content">
         <button onclick="bubbleSort()" class="button start">Bubble Sort</button>
-        <button onclick="selectionSort()()" class="button start">
+        <button onclick="selectionSort()" class="button start">
           Selection sort
         </button>
       </div>
     </div>
+
+    <!-- Canvas -->
 
     <canvas
       id="canvas"
